Bugs Stats + Efficacité gardien

--- a/src/app/components/i18n/home/fr.json
+++ b/src/app/components/i18n/home/fr.json
@@ -10,6 +10,9 @@
     "widgetTopUsed": {
       "title": "Les + utilisés"
     },
+    "widgetTopHolder": {
+      "title": "Les + titularisés"
+    },
     "widgetNotifications": {
       "title": "Notifications"
     },
