Stats event liste joueurs

--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -71,13 +71,16 @@
       "listPlayers": "Liste joueurs",
       "goalkeeper": "Gardien",
       "player": "Joueur",
+      "playTime": "Temps de jeu",    
       "position": "Poste",
-      "efficiency": "Efficatité",
+      "holder": "Titulaire",    
+      "efficiency": "Efficatité au tir",
       "shoot": "But/Tir",
       "efficiencyGoal": "% Arrêt",
       "stop": "Arrêt/Tir",
       "attack": "Attaque (+/-)",
       "defense": "Defense (+/-)",
+      "sanction": "Sanctions",
       "yellowCard": "CJ",
       "exclusion": "2'",
       "redCard": "CR"
