--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -70,6 +70,8 @@
     "eventLabels": {
       "listPlayers": "Player list",
       "goalkeeper": "Goalkeeper",
+      "holder": "Holder",    
+      "playTime": "Playtime",    
       "player": "Player",
       "position": "Position",
       "efficiency": "Efficiency",
@@ -80,6 +82,7 @@
       "defense": "Defense (+/-)",
       "yellowCard": "YC",
       "exclusion": "2'",
+      "sanction": "Sanction",
       "redCard": "RC"
     },
     "label": {
