Note match par joueur

--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -70,7 +70,8 @@
     "eventLabels": {
       "listPlayers": "Player list",
       "goalkeeper": "Goalkeeper",
-      "holder": "Holder",    
+      "holder": "Holder",
+      "note": "Note",
       "playTime": "Playtime",    
       "player": "Player",
       "position": "Position",
