--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -73,7 +73,8 @@
       "player": "Joueur",
       "playTime": "Temps de jeu",    
       "position": "Poste",
-      "holder": "Titulaire",    
+      "holder": "Titulaire",
+      "note": "Note",
       "efficiency": "Efficatité au tir",
       "shoot": "But/Tir",
       "efficiencyGoal": "% Arrêt",
