QHBWEB-209 : Ajout Widget Origine et impact des tirs

--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -59,6 +59,8 @@
       "resume": "Synthesis"
     },
     "typoGoal": "Typologie des buts",
+    "adversary": "Adversary",
+    "myteam": "My team",
     "sanction": {
       "yellowCard": "Yellow card",
       "excluTempo": "2 minutes",
