--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -59,6 +59,8 @@
       "resume": "Résumé"
     },
     "typoGoal": "Typologie des buts",
+    "adversary": "Adversaire",
+    "myteam": "Mon équipe",
     "sanction": {
       "yellowCard": "Avertissement",
       "excluTempo": "2 minutes",
