Design heat map

--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -58,7 +58,7 @@
       "actions": "Actions de jeu",
       "resume": "Résumé"
     },
-    "typoGoal": "Typologie des buts",
+    "typoGoal": "Origine et impact des tirs",
     "adversary": "Adversaire",
     "myteam": "Mon équipe",
     "sanction": {
