QHBWEB-172 : Migration stripe - Gestion de l'annulation de la souscription

--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -60,7 +60,7 @@
   "billingPage": {
     "title": "Gestion des abonnements",
     "label": {
-      "billingdate": "Date de souscription",
+      "billingdate": "Dernier paiement",
       "billingnumber": "Numéro de souscription",
       "product": "Abonnement",
       "price": "Prix",
