--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -60,18 +60,30 @@
   "billingPage": {
     "title": "Gestion des abonnements",
     "label": {
-      "billingdate": "Date de paiement",
+      "billingdate": "Date de souscription",
       "billingnumber": "Numéro de facture",
       "product": "Abonnement",
       "price": "Prix",
       "activity": "Activité",
-      "pay": "Souscrire",
       "cardNumber": "N° de carte",
       "trial" : "En période d'essai",
-      "pay-modal" : {
-        "title" : "Attention",
-        "content" : "Vous êtes sur le point de souscrire à une offre Qaobee, notre partenaire de paiement vous demandra votre carte de crédit",
-        "error" : "Une erreur s'est produite durant la transaction."
+      "pay": {
+        "title": "Souscrire",
+        "content": "Vous êtes sur le point de souscrire à une offre Qaobee.",
+        "name": "Nom du porteur",
+        "cardNumber": "N° de carte",
+        "expiry": "Expire le",
+        "cvc" : "Code de vérification",
+        "email" : "E-mail",
+        "pay" : "Payer"
+      },
+      "status" : {
+        "open" : "Période d'essai jusqu'au {{value}}",
+        "canceled" : "Annulé",
+        "trialing": "Période d'essai jusqu'au {{value}}",
+        "active" : "Activé",
+        "past_due" : "Paiement échoué",
+        "unpaid" : "Non payé"
       }
     }
   },
