--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -42,7 +42,8 @@
     "download": "Téléchargez",
     "collect": "Collectez",
     "progress": "Analysez",
-    "collaborate": "Collaborez"
+    "collaborate": "Collaborez",
+    "aboutUs":"A propos"      
   },
   "modal": {
     "login": {
