--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -58,7 +58,8 @@
       "changeSB": "Change",
       "accept": "Accept",
       "refuse": "Refuse",
-      "read-more": "Learn more"
+      "read-more": "Learn more",
+      "subscribe": "Subscribe"
     },
     "settings": {
       "activity": {
