--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -58,7 +58,8 @@
       "changeSB": "Changer",
       "accept": "Accepter",
       "refuse": "Refuser",
-      "read-more": "En savoir plus"
+      "read-more": "En savoir plus",
+      "subscribe": "Souscrire"
     },
     "settings": {
       "activity": {
