QHBWEB-243 : Info période d'essai et compte inactif au login

--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -66,7 +66,8 @@
       "price": "Prix",
       "activity": "Activité",
       "cardNumber": "N° de carte",
-      "trial" : "En période d'essai",
+      "trial" : "Trial period",
+      "trialEnded": "Trial period ended",
       "pay": {
         "title": "Souscrire",
         "content": "Vous êtes sur le point de souscrire à une offre Qaobee.",
