--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -76,6 +76,7 @@
         "cvc" : "Code de vérification",
         "email" : "E-mail",
         "pay" : "Payer",
+        "unsubscribe": "Cloturer",
         "error_code" : {
           "incorrect_cvc" : "Le code de vérification de votre carte est erroné",
           "card_declined" : "Votre carte a été refusée {{reason}}",
