--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -232,9 +232,9 @@
     "buttonHome": "Accueil"
   },
   "signupStartDonePage": {
-    "title": "Compte créé !",
-    "line1": "Votre inscription est presque terminée !",
-    "line2": "Vous allez recevoir d'ici quelques minutes un e-mail pour valider votre compte Qaobee.",
+    "title": "Félicitation et merci de choisir Qaobee !",
+    "line1": "Votre inscription est presque terminée, encore un petit effort !",
+    "line2": "Rendez-vous dans votre boîte mail pour valider votre compte Qaobee.",
     "line3": "A très vite sur qaobee.com !",
     "signature": "L'équipe Qaobee",
     "buttonHome": "Accueil"
