--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -43,7 +43,8 @@
     "collect": "Collect",
     "progress": "Progress",
     "collaborate": "Collaborate",
-    "aboutUs":"About us"
+    "aboutUs": "About us",
+    "news": "News"
   },
   "modal": {
     "login": {
